--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -237,7 +237,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:text="Sorry, delivery is not available in your area at the moment."
+                            android:text="@string/nodelivery"
                             android:textColor="@color/red"
                             android:textSize="15sp"
                             android:visibility="gone"
@@ -248,7 +248,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:text="Good news! We can deliver to you.."
+                            android:text="@string/delivery"
                             android:textColor="@color/black"
                             android:textSize="15sp"
                             android:visibility="gone"
