--- a/base/src/main/res/layout/m_multiplegrid.xml
+++ b/base/src/main/res/layout/m_multiplegrid.xml
@@ -87,7 +87,8 @@
                         android:layout_marginStart="2dp"
                         android:layout_marginEnd="2dp"
                         android:gravity="center"
-                        android:maxLines="2"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:text="@{listdata.textdata}"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"
                         app:layout_constraintEnd_toEndOf="parent"
