--- a/base/src/main/res/layout/product_list_item.xml
+++ b/base/src/main/res/layout/product_list_item.xml
@@ -40,15 +40,12 @@
                 android:id="@+id/image"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
                 bind:layout_constraintTop_toTopOf="parent"
                 bind:layout_constraintStart_toStartOf="parent"
-                android:adjustViewBounds="true"
                 android:contentDescription="@string/image"
-                android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
-
-                bind:layout_constraintDimensionRatio="H,0.8:1.1" />
+                android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
